2005-01-23  Benhur Stein <benhur@inf.ufsm.br>
	* General/UniqueString.m: comment out some debug messages

2005-01-20  Benhur Stein <benhur@inf.ufsm.br>
	* SpaceTimeViewer/DrawView.[hm]: workaround a probable bug in GNUstep
	  ([NSScrollView tile] is changing the frame size)

2005-01-20  Benhur Stein <benhur@inf.ufsm.br>
	* Documentation/lang-paje/{typeevent.tex,lang-paje.tex}:
	  comment the inclusion of some files, to make the documentation
	  compile.

2005-01-09  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTimeViewer/STEntityTypeLayout.[hm]: declare and implement
          accessors for minValue and maxValue (for storing limits of graph)
	* SpaceTimeViewer/STEntityTypeLayout.gorm: added a new Form for
          max & min values of variables; 
        * SpaceTimeViewer/STEntityTypeLayoutController.[mh]: make use of new
          variables and Form (they are not saved in defaults);
        * SpaceTimeViewer/DrawView+Drawing.m: use min and maxValue from 
          descriptor, if valid.

2005-01-05  Benhur Stein <benhur@inf.ufsm.br>
	* GNUmakefile, Paje/PajeController.m, Paje/PajeTraceController.m:
	  compile and load FieldFilter

2005-01-05  Benhur Stein <benhur@inf.ufsm.br>
	* FieldFilter, FieldFilter/FieldFilterDescriptor.h,
	  FieldFilter/FieldFilter.h, FieldFilter/FieldFilterDescriptor.m,
	  FieldFilter/FieldFilter.m, FieldFilter/GNUmakefile,
	  FieldFilter/FieldFilter.gorm: new files, first implementation of
	  filter that selects entities based on values of some of its fields.

2005-01-05  Benhur Stein <benhur@inf.ufsm.br>
	* General/PajeEntity.m: added -duration method (returns elapsed time
	  of entity); added "StartTime", "EndTime" and "Duration" named fields
	* General/PajeType.h: added new instance variable "fieldNames" to
	  hold all known names of fields of entities of a type.
	* General/PajeType.m: initialize new variable; implemented 
	  new methods -addFieldNames: and -fieldNames to populate and get
	  names of fields.